--- a/package.json
+++ b/package.json
@@ -4,21 +4,23 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "concurrently \"json-server --watch db.json -m ./node_modules/json-server-auth\" \"vite --open\"",
+    "start": "concurrently \"json-server --watch db.json -m ./node_modules/json-server-auth\" \"vite\"",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "antd": "^5.20.1",
     "axios": "^1.7.2",
     "concurrently": "^8.2.2",
     "json-server": "^0.17.4",
     "json-server-auth": "^2.1.0",
-    "react-hook-form": "^7.51.5",
-    "react-toastify": "^10.0.5",
-    "react-router-dom": "^6.23.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
